--- a/calculator.css
+++ b/calculator.css
@@ -7,8 +7,8 @@ body {
 
 .wrapper {
     display: flex;
-    height: 50vh;
-    width: 40vh;
+    height: fit-content;
+    width: fit-content;
     border: solid 1px black;
     padding: 10px;
     justify-content: center;
@@ -24,23 +24,21 @@ body {
     padding: 5px;
     background-color: #7895B2;
     border-radius: 5px;
-    font-size: 60px;
     color: aliceblue;
     align-items: center;
     text-align: right;
 }
 
 span {
+    font-size: 2em;
     vertical-align: middle;
 }
 
 .keys-grid{
     width: 100%;
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto auto auto auto;
-    column-gap: 10px;
-    row-gap: 20px;
+    grid-template-columns: repeat(4, auto);
+    gap: 10px;
 }
 
 .num {
