--- a/calculator.css
+++ b/calculator.css
@@ -37,17 +37,23 @@ span {
 .keys-grid{
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(4, 1fr);
     gap: 10px;
 }
 
-.num {
+.num, .num-dec {
     height: 50px;
-    width: 70px;
+    width: auto;
     font-size: 24px;
     background-color: #e8dfca;
     border: solid 1px #b8a988;
     border-radius: 5px;
+}
+
+#zero {
+    grid-column-start: span 2;
+    /* grid-column-end: 4; */
+    /* grid-column: span 2 / 3; */
 }
 
 .key-op{
